--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.8.1
 boto3==1.34.74
 botocore==1.34.74
-Django==4.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0.3
 django-cors-headers==4.3.1
 django-redis==5.4.0
 django-ses==3.5.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+docker==7.0.0
+idna==3.6
 jmespath==1.0.1
+packaging==24.0
 pillow==10.2.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
@@ -15,6 +20,7 @@ python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.3
+requests==2.31.0
 s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.4.4
