--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ boto3==1.34.74
 botocore==1.34.74
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django==4.2.11
+Django==5.0.3
 django-cors-headers==4.3.1
 django-ratelimit==4.1.0
 django-redis==5.4.0
@@ -26,4 +26,4 @@ requests==2.31.0
 s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.4.4
-urllib3==2.2.1
+urllib3>=1.25.4, =<1.27
