--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,50 @@
 asgiref==3.8.1
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 boto3==1.34.74
 botocore==1.34.74
 certifi==2024.2.2
+cffi==1.16.0
+channels==4.1.0
 charset-normalizer==3.3.2
-Django==4.2.11
+constantly==23.10.4
+cryptography==42.0.7
+daphne==4.1.2
+Django==5.0
 django-cors-headers==4.3.1
 django-ratelimit==4.1.0
 django-redis==5.4.0
 django-ses==3.5.2
+django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 docker==7.0.0
+hiredis==2.3.2
+hyperlink==21.0.0
 idna==3.6
+incremental==22.10.0
 jmespath==1.0.1
 packaging==24.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2024.1
-redis==5.0.3
+redis==5.0.4
 requests==2.31.0
 s3transfer==0.10.1
+service-identity==24.1.0
 six==1.16.0
 sqlparse==0.4.4
+Twisted==24.3.0
+txaio==23.1.1
+typing_extensions==4.11.0
 urllib3==1.26.18
+zope.interface==6.4
