--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
+amqp==5.2.0
+anyio==4.4.0
 asgiref==3.8.1
+async-timeout==4.0.3
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+billiard==4.2.0
+cachetools==5.4.0
+celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+config==0.5.1
 constantly==23.10.4
 cryptography==42.0.7
 daphne==4.1.2
@@ -16,13 +28,26 @@ django-redis==5.4.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 docker==7.0.0
+google-api-core==2.19.1
+google-cloud-core==2.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.2
+h11==0.14.0
 hiredis==2.3.2
+httpcore==1.0.5
+httpx==0.27.0
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
 jmespath==1.0.1
+kombu==5.3.7
+msgpack==1.0.8
 packaging==24.0
 pillow==10.2.0
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.27.2
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -35,11 +60,16 @@ python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.4
 requests==2.31.0
+rsa==4.9
 service-identity==24.1.0
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.4.4
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==1.26.18
+vine==5.1.0
+wcwidth==0.2.13
 zope.interface==6.4
