--- a/requirements.txt
+++ b/requirements.txt
@@ -22,16 +22,20 @@ constantly==23.10.4
 cryptography==42.0.7
 daphne==4.1.2
 Django==5.0
+django-celery-results==2.5.1
 django-cors-headers==4.3.1
 django-ratelimit==4.1.0
 django-redis==5.4.0
+django-storages==1.14.4
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 docker==7.0.0
 google-api-core==2.19.1
+google-auth==2.35.0
 google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
 google-crc32c==1.5.0
-google-resumable-media==2.7.1
+google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
 h11==0.14.0
 hiredis==2.3.2
@@ -43,6 +47,7 @@ incremental==22.10.0
 jmespath==1.0.1
 kombu==5.3.7
 msgpack==1.0.8
+numpy==2.1.2
 packaging==24.0
 pillow==10.2.0
 prompt_toolkit==3.0.47
@@ -61,6 +66,7 @@ pytz==2024.1
 redis==5.0.4
 requests==2.31.0
 rsa==4.9
+sentry-sdk==2.17.0
 service-identity==24.1.0
 six==1.16.0
 sniffio==1.3.1
